--- a/ticket-angular-app/src/app/dashboard/dashboard.component.html
+++ b/ticket-angular-app/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<div *ngFor="let customer of customerInfo">
+
+    <h1>{{customer.id}}</h1>
+    <h1>{{customer.email}}</h1>
+</div>
