Fixed calendar not being configurable

--- a/ticket-angular-app/src/app/make-appointment/make-appointment.component.html
+++ b/ticket-angular-app/src/app/make-appointment/make-appointment.component.html
@@ -1,2 +1,1 @@
-<p-fullCalendar [events]="calendarEvents" [options]="calendarOptions"></p-fullCalendar>
-
+<full-calendar [options]="calendarOptions"></full-calendar>
