made some progress on the appointments page, added inputs and dropdowns

--- a/ticket-angular-app/src/app/app.component.html
+++ b/ticket-angular-app/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div class="mainMenu">
-  <p-tabMenu [model]="menuItems" [activeItem]="activeItem"></p-tabMenu>
-  
-</div>
-<div class="mainContent">
-  <router-outlet></router-outlet>
+<div>
+  <div class="mainMenu">
+    <p-tabMenu [model]="menuItems" [activeItem]="activeItem"></p-tabMenu>
+    
+  </div>
+  <div class="mainContent">
+    <router-outlet></router-outlet>
+  </div>
 </div>
