--- a/ticket-angular-app/src/app/app.component.html
+++ b/ticket-angular-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<span class="mainBackground">
   <div class="mainMenu">
     <p-tabMenu [model]="menuItems" [activeItem]="activeItem"></p-tabMenu>
     
@@ -6,4 +6,4 @@
   <div class="mainContent">
     <router-outlet></router-outlet>
   </div>
-</div>
+</span>
