--- a/ticket-angular-app/src/app/make-appointment/make-appointment.component.html
+++ b/ticket-angular-app/src/app/make-appointment/make-appointment.component.html
@@ -9,7 +9,7 @@
         <h3>Email*</h3>
         <input type="text" pInputText />
         <h3>Phone*</h3>
-        <p-inputMask mask="(+40) 999-9999" placeholder="(+40) 999-9999"></p-inputMask>
+        <p-inputMask mask="(+40) 999-999-999" placeholder="(+40) 999-9999"></p-inputMask>
         
         <h3>Select time</h3>
         <div class="p-input-outlined">
